syntax = "proto3";

package session;

message LoginRequest {
  string ident = 1;
  string pwd = 2;
  string totp = 3;
}

message Empty {}

service Session {
  rpc Login(session.LoginRequest) returns (Empty);
  rpc Logout(Empty) returns (Empty);
}