syntax = "proto3";

package user;

message SignupRequest {
  string email = 1;
  string pwd = 2;
}

message ResetRequest {
  string email = 1;
  string pwd = 2;
  string totp = 3;
}

message DeleteRequest {
  string pwd = 1;
  string totp = 2;
}

message TotpRequest {
  enum actions {
    ENABLE = 0;
    DISABLE = 1;
  };

  actions action = 1;
  string pwd = 2;
  string totp = 3;
}

message Empty {}

service User {
  rpc Signup(user.SignupRequest) returns (Empty);
  rpc Reset(user.ResetRequest) returns (Empty);
  rpc Delete(user.DeleteRequest) returns (Empty);
  rpc Totp(user.TotpRequest) returns (Empty);
}